fix overflow on markdown

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
 .markdown {
   max-width: 820px;
+  overflow: scroll;
 }
